NetBSD Problem Report #12020
Received: (qmail 14891 invoked from network); 21 Jan 2001 16:48:06 -0000
Message-Id: <200101211647.f0LGlfX00485@azenomei.knuffel.net>
Date: Sun, 21 Jan 2001 17:47:41 +0100 (CET)
From: Rhialto <rhialto@azenomei.knuffel.net>
To: gnats-bugs@gnats.netbsd.org, rhialto@polderland.nl
Subject: Sysinst refuses upgrade unnecessarily (overzealous fscking)
>Number: 12020
>Category: install
>Synopsis: Sysinst refuses upgrade unnecessarily (overzealous fscking)
>Confidential: no
>Severity: non-critical
>Priority: medium
>Responsible: install-manager
>State: closed
>Class: sw-bug
>Submitter-Id: net
>Arrival-Date: Sun Jan 21 16:49:00 +0000 2001
>Closed-Date: Mon Sep 03 18:31:57 +0000 2012
>Last-Modified: Mon Sep 03 20:05:01 +0000 2012
>Originator: Rhialto
>Release: 1.5
>Organization:
>Environment:
System: NetBSD azenomei.falu.nl 1.5.1_ALPHA NetBSD 1.5.1_ALPHA (AZENOMEI) #14: Thu Jan 11 01:09:29 CET 2001 rhialto@azenomei.falu.nl:/vol1/rhialto/sup/root/src/sys/arch/alpha/compile/AZENOMEI alpha
>Description:
I was trying to upgrade my Alpha with sysinst on sd0. I know the
standard kernel cannot handle my wd0 but no system stuff is on
it, so it should not make a difference.
So sysinst asks if I want to install on sd0 or wd0, I choose
sd0, and it starts to fsck. Then, guess what happens: it tries
to fsck wd0a, and fails. Then it aborts the upgrade.
I think that if I choose sd0, wd0 should not be checked. On the
other hand, it is a peeve of mine that sysinst does not support
installs spread out over multiple disks, so maybe that is too
drastic. Sysinst could check mount points, and/or ask the user
if this partition should be ignored (thus not mounted) during
the upgrade.
>How-To-Repeat:
see above.
>Fix:
Workaround (thanks to Pållen): remove or comment out wd0a from
the fstab before the upgrade procedure.
-Olaf.
--
___ Olaf 'Rhialto' Seibert - rhialto@polder --Soep van de dag, wat zal dat zijn
\X/ land.nl --wat kan dat wezen, beter maar het ergste vrezen -Boy Bensdorp
>Release-Note:
>Audit-Trail:
From: Julian Djamil Fagir <gnrp@komkon2.de>
To: gnats-bugs@gnats.netbsd.org
Cc:
Subject: Re: install/12020: Sysinst refuses upgrade unnecessarily
(overzealous fscking)
Date: Wed, 29 Feb 2012 02:14:29 +0100
--MP_/WoQlOUNoIVFZto9BifgJS9M
Content-Type: text/plain; charset=US-ASCII
Content-Transfer-Encoding: 7bit
Content-Disposition: inline
Hi,
what about the attached patches?
They will ask after a failed fsck and after a failed mount whether to
continue or rather abort the installation.
Btw, fixed a bug where mount_disks() returned 0 (which was expected to define
no error) if there was an error, thus the installation continued though I had
no /etc/fstab on the upgraded machine.
As I only have one machine to test this on, please test and review this patch.
Regards, Julian
--MP_/WoQlOUNoIVFZto9BifgJS9M
Content-Type: text/x-patch
Content-Transfer-Encoding: 7bit
Content-Disposition: attachment; filename=disks.c.diff
--- disks.c
+++ disks.c
@@ -803,12 +803,16 @@
error = fsck_preen(list[0].u.s_val, ' '-'a', "ffs");
if (error != 0)
return error;
error = target_mount("", list[0].u.s_val, ' '-'a', list[1].u.s_val);
- if (error != 0)
- return error;
+ if (error != 0) {
+ msg_display(MSG_mount_failed, list[0].u.s_val);
+ process_menu(MENU_noyes, NULL);
+ if (!yesno)
+ return error;
+ }
return 0;
}
#ifdef USE_SYSVBFS
static int
@@ -852,11 +856,13 @@
fixsb(prog, disk, ptn);
error = run_program(0, "%s -p -q /dev/r%s%c", prog, disk, ptn);
free(prog);
if (error != 0) {
msg_display(MSG_badfs, disk, ptn, error);
- process_menu(MENU_ok, NULL);
+ process_menu(MENU_noyes, NULL);
+ if (yesno)
+ error = 0;
/* XXX at this point maybe we should run a full fsck? */
}
return error;
}
@@ -964,29 +970,29 @@
/* avoid needing to call target_already_root() again */
targetroot_mnt[0] = 0;
else {
error = mount_root();
if (error != 0 && error != EBUSY)
- return 0;
+ return -1;
}
/* Check the target /etc/fstab exists before trying to parse it. */
if (target_dir_exists_p("/etc") == 0 ||
target_file_exists_p("/etc/fstab") == 0) {
msg_display(MSG_noetcfstab, diskdev);
process_menu(MENU_ok, NULL);
- return 0;
+ return -1;
}
/* Get fstab entries from the target-root /etc/fstab. */
fstabsize = target_collect_file(T_FILE, &fstab, "/etc/fstab");
if (fstabsize < 0) {
/* error ! */
msg_display(MSG_badetcfstab, diskdev);
process_menu(MENU_ok, NULL);
- return 0;
+ return -1;
}
error = walk(fstab, (size_t)fstabsize, fstabbuf, numfstabbuf);
free(fstab);
return error;
--MP_/WoQlOUNoIVFZto9BifgJS9M
Content-Type: text/x-patch
Content-Transfer-Encoding: 7bit
Content-Disposition: attachment; filename=menus.mi.diff
--- menus.mi
+++ menus.mi
@@ -374,10 +374,16 @@
yesno = 0;
#endif
};
option MSG_other, exit, action
{ yesno = 0; };
+
+menu runpostinst, title MSG_Run_Postinst, y=-5;
+ option MSG_Postinst, exit, action { *(int *)arg = 0; };
+ option MSG_Etcupdate, exit, action { *(int *)arg = 1; };
+ option MSG_Skip_postinst, exit, action { *(int *)arg = 2; };
+ option MSG_Abandon, exit, action { *(int *)arg = 3; };
menu rootsh, title MSG_Root_shell;
option "/bin/sh", exit, action {*(const char **)arg = "/bin/sh";};
option "/bin/ksh", exit, action {*(const char **)arg = "/bin/ksh";};
option "/bin/csh", exit, action {*(const char **)arg = "/bin/csh";};
--MP_/WoQlOUNoIVFZto9BifgJS9M
Content-Type: text/x-patch
Content-Transfer-Encoding: quoted-printable
Content-Disposition: attachment; filename=msg.mi.de.diff
--- msg.mi.de
+++ msg.mi.de
@@ -106,10 +106,22 @@
Zu diesem Zeitpunkt sollten Sie bereits eine vollst=E4ndige
Datensicherung durchgef=FChrt haben! Wollen Sie NetBSD wirklich aktualisie=
ren?
(Dies ist die letzte Warnung, bevor Ihre Festplatte(n) modifiziert werden.)
}
=20
+message Run_Postinst
+{Dateien in /etc updaten}
+
+message Postinst
+{postinst ausf=FChren (existierende Konfiguration =FCberschreiben)}
+
+message Etcupdate
+{etcupdate ausf=FChren (zu jeder ge=E4nderten Datei nachfragen)}
+
+message Skip_postinst
+{Keine Dateien in /etc updaten}
+
message reinstallusure
{Im folgenden werden die NetBSD Distributionssets (Kernel + Basissystem)
auf eine vorbereitete Festplatte ausgepackt. Diese Prozedur l=E4dt und ent=
packt
die Sets auf eine im Vorfeld partitionierte und bootf=E4hige Festplatte au=
s.
Es werden weder Festplatten gelabelt, Bootbl=F6cke aktualisiert noch beste=
hende
@@ -122,10 +134,13 @@
Wollen Sie die NetBSD Distributionssets wirklich erneut installieren?
(Dies ist die letzte Warnung, bevor die Inhalte Ihres Dateisystems
=FCberschrieben werden!)
}
=20
+message mount_failed
+{Versuch, %s zu mounten ist fehlgeschlagen. Fortfahren?
+}
=20
message nodisk
{Ich kann keine f=FCr NetBSD nutzbaren Festplatten finden.
Zur=FCck zum Hauptmen=FC...
}
@@ -709,13 +724,13 @@
{Erstelle Ger=E4tedateien in /dev ...
}
=20
message badfs
{Das Dateisystem auf /dev/%s%c scheint kein BSD-Dateisystem zu sein,
-die Pr=FCfung des Dateisystems (fsck) ist fehlgeschlagen.
+die Pr=FCfung des Dateisystems (fsck) ist fehlgeschlagen (Fehler %d).
=20
-Die Aktualisierung wird abgebrochen. (Fehlernummer %d.)
+Die Aktualisierung trotzdem fortsetzen?
}
=20
message rootmissing
{Das Zielverzeichnis %s existiert nicht.
}
--MP_/WoQlOUNoIVFZto9BifgJS9M
Content-Type: text/x-patch
Content-Transfer-Encoding: 7bit
Content-Disposition: attachment; filename=msg.mi.en.diff
--- msg.mi.en
+++ msg.mi.en
@@ -102,10 +102,22 @@
before this procedure! Do you really want to upgrade NetBSD?
(This is your last warning before this procedure starts modifying your
disks.)
}
+message Run_Postinst
+{Update files in /etc}
+
+message Postinst
+{Execute postinst (overwrite existing configuration)}
+
+message Etcupdate
+{Execute etcupdate (ask for every overwrite)}
+
+message Skip_postinst
+{Don't update any file on /etc}
+
message reinstallusure
{Ok, let's unpack the NetBSD distribution sets to a bootable hard disk.
This procedure just fetches and unpacks sets onto an pre-partitioned
bootable disk. It does not label disks, upgrade bootblocks, or save
any existing configuration info. (Quit and choose `install' or
@@ -115,10 +127,13 @@
Do you really want to reinstall NetBSD distribution sets?
(This is your last warning before this procedure starts modifying your
disks.)
}
+message mount_failed
+{Mounting %s failed. Continue?
+}
message nodisk
{I can not find any hard disks for use by NetBSD. You will be
returned to the original menu.
}
@@ -678,11 +693,11 @@
{Making device nodes ...
}
message badfs
{It appears that /dev/%s%c is not a BSD file system or the fsck was
-not successful. The upgrade has been aborted. (Error number %d.)
+not successful (Error number %d.). Try mounting it anyway?
}
message rootmissing
{ target root is missing %s.
}
--MP_/WoQlOUNoIVFZto9BifgJS9M
Content-Type: text/x-patch
Content-Transfer-Encoding: quoted-printable
Content-Disposition: attachment; filename=msg.mi.es.diff
--- msg.mi.es
+++ msg.mi.es
@@ -108,10 +108,22 @@
completa antes de este procedimiento! =BFRealmente desea actualizar NetBS=
D?
(=C9ste es su =FAltimo aviso antes de que el programa empiece a modificar
sus discos.)
}
=20
+message Run_Postinst
+{Update files in /etc}
+
+message Postinst
+{Execute postinst (overwrite existing configuration)}
+
+message Etcupdate
+{Execute etcupdate (ask for every overwrite)}
+
+message Skip_postinst
+{Don't update any file on /etc}
+
message reinstallusure
{Se va a desempaquetar los conjuntos de distribuci=F3n de NetBSD
a un disco duro marcado como arrancable. Este procedimiento solamente
descarga y desempaqueta los conjuntos en un disco arrancable preparticiona=
do.
No pone nombre a los discos, ni actualiza los bloques de arranque, ni guar=
da
@@ -122,10 +134,13 @@
=BFRealmente quiere reinstalar los conjuntos de la distribuci=F3n NetBSD?
(=C9ste es su =FAltimo aviso antes de que el programa empiece a modificar
sus discos.)
}
=20
+message mount_failed
+{Mounting %s failed. Continue?
+}
=20
message nodisk
{No se ha podido encontrar ning=FAn disco duro para ser usado por NetBSD.
Se le volver=E1 a llevar al men=FA original.
}
@@ -699,11 +714,11 @@
{Creando nodos de dispositivo ...
}
=20
message badfs
{Parece que /dev/%s%c no es un sistema de archivos BSD o el fsck no ha sido
-correcto. La actualizaci=F3n ha sido interrumpida. (Error n=FAmero %d.)
+correcto (Error n=FAmero %d.) =BFContinuar?
}
=20
message rootmissing
{ el directorio ra=EDz objetivo no existe %s.
}
--MP_/WoQlOUNoIVFZto9BifgJS9M
Content-Type: text/x-patch
Content-Transfer-Encoding: quoted-printable
Content-Disposition: attachment; filename=msg.mi.fr.diff
--- msg.mi.fr
+++ msg.mi.fr
@@ -107,10 +107,22 @@
Voulez-vous vraiment mettre =E0 jour NetBSD ?
(Ceci est le dernier avertissement avant que cette
proc=E9dure ne modifie votre disque.)
}
=20
+message Run_Postinst
+{Update files in /etc}
+
+message Postinst
+{Execute postinst (overwrite existing configuration)}
+
+message Etcupdate
+{Execute etcupdate (ask for every overwrite)}
+
+message Skip_postinst
+{Don't update any file on /etc}
+
message reinstallusure
{D=E9compressons maintenant les composants de NetBSD sur un disque dur
d=E9marrable.
Cette proc=E9dure va rapatrier et d=E9compresser les composants
sur un disque d=E9marrable d=E9j=E0 partitionnn=E9.
@@ -122,10 +134,14 @@
ou une mise =E0 jour avant de d=E9marrer cette proc=E9dure !
=20
Voulez-vous r=E9ellement r=E9installer les composants NetBSD ?
(Ceci est le dernier avertissement avant que cette proc=E9dure ne commence=
=E0
modifier vos disques.)
+}
+
+message mount_failed
+{Mounting %s failed. Continue?
}
=20
message nodisk
{Nous ne trouvons aucun disque utilisable par NetBSD. Vous allez retourner
au menu pr=E9c=E9dent.
@@ -740,13 +756,13 @@
}
=20
message badfs
{
/dev/%s%c ne semble pas =EAtre un syst=E8me de fichiers BSD ou bien
-la v=E9rification de son int=E9grit=E9 par fsck a =E9chou=E9.
+la v=E9rification de son int=E9grit=E9 par fsck a =E9chou=E9, code d'erreu=
r %d.
=20
-Interruption de la proc=E9dure de mise =E0 jour, code d'erreur %d.
+Souhaitez-vous continuer mise =E0 jour?
}
=20
message rootmissing
{
Impossible de trouver la racine du disque cible %s.
--MP_/WoQlOUNoIVFZto9BifgJS9M
Content-Type: text/x-patch
Content-Transfer-Encoding: 7bit
Content-Disposition: attachment; filename=msg.mi.pl.diff
--- msg.mi.pl
+++ msg.mi.pl
@@ -106,10 +106,22 @@
przed rozpoczeciem! Czy napewno chcesz zaktualizowac NetBSD?
(Jest to ostatnie ostrzezenie zanim zacznie sie modyfikacja danych na
twoich dyskach.)
}
+message Run_Postinst
+{Update files in /etc}
+
+message Postinst
+{Execute postinst (overwrite existing configuration)}
+
+message Etcupdate
+{Execute etcupdate (ask for every overwrite)}
+
+message Skip_postinst
+{Don't update any file on /etc}
+
message reinstallusure
{Ok, rozpakujmy pakiety dystrybucyjne NetBSD na bootowalny twardy dysk.
Ta procedura tylko sciaga i rozpakowuje pakiety na pre-partycjonowany
bootowalny dysk. Nie nazywa dyskow, aktualizuje bootblokow, lub zapisuje
istniejacej konfiguracji. (Wyjdz i wybierz `instaluj' lub
@@ -119,10 +131,13 @@
Czy napewno chcesz przeinstalowac pakiety dystrybucjne NetBSD?
(Jest to ostatnie ostrzezenie zanim zacznie sie modyfikacja danych na
twoich dyskach.)
}
+message mount_failed
+{Mounting %s failed. Continue?
+}
message nodisk
{Nie moge znalezc zadnych twardych dyskow do uzycia z NetBSD. Zostaniesz
przeniesiony do menu glownego.
}
@@ -677,10 +692,14 @@
message badfs
{Wyglada na to, ze /dev/%s%c nie jest systemem plikow BSD albo nie powiodlo sie
jego sprawdzenie. Aktualizacja zostala przerwana. (Blad numer %d.)
}
+/* XXX: Translate:
+ * -not successful. The upgrade has been aborted. (Error number %d.)
+ * +not successful (Error number %d.). Try mounting it anyway?
+ */
message rootmissing
{ docelowy / jest zagubiony %s.
}
--MP_/WoQlOUNoIVFZto9BifgJS9M--
From: Julian Fagir <gnrp@komkon2.de>
To: gnats-bugs@gnats.netbsd.org
Cc:
Subject: Re: install/12020: Sysinst refuses upgrade unnecessarily
(overzealous fscking)
Date: Wed, 29 Feb 2012 02:22:29 +0100
Hi,
I'm sorry for sending the patches quoted-printable.
You can also fetch the patches from http://komkon2.de/patches/$patchname, i.e.
http://komkon2.de/patches/defs.h.diff
http://komkon2.de/patches/disks.c.diff
http://komkon2.de/patches/menus.mi.diff
http://komkon2.de/patches/msg.mi.de.diff
http://komkon2.de/patches/msg.mi.en.diff
http://komkon2.de/patches/msg.mi.es.diff
http://komkon2.de/patches/msg.mi.pl.diff
http://komkon2.de/patches/msg.mi.fr.diff
Additionally, somebody should have a look at the Polish, French and Spanish
translations. They're either not done or just by guessing (or poor French ;-).
Regards, Julian
From: Matthew Mondor <mm_lists@pulsar-zone.net>
To: gnats-bugs@NetBSD.org
Cc:
Subject: Re: install/12020: Sysinst refuses upgrade unnecessarily
(overzealous fscking)
Date: Wed, 29 Feb 2012 01:38:12 -0500
--MP_/kSLj2N1n0rjmqKcyb+Z3XcS
Content-Type: text/plain; charset=US-ASCII
Content-Transfer-Encoding: 7bit
Content-Disposition: inline
On Wed, 29 Feb 2012 02:25:02 +0000 (UTC)
Julian Fagir <gnrp@komkon2.de> wrote:
> Additionally, somebody should have a look at the Polish, French and Spanish
> translations. They're either not done or just by guessing (or poor French ;-
Diff against your msg.mi.fr.diff (msg.mi.fr.diff.diff :) attached
--
Matt
--MP_/kSLj2N1n0rjmqKcyb+Z3XcS
Content-Type: text/plain
Content-Transfer-Encoding: base64
Content-Disposition: attachment; filename=msg.mi.fr.diff.diff
LS0tIG1zZy5taS5mci5kaWZmLm9yaWcJMjAxMi0wMi0yOSAwMToyMjoyOC4wMDAwMDAwMDAgLTA1
MDANCisrKyBtc2cubWkuZnIuZGlmZgkyMDEyLTAyLTI5IDAxOjM0OjA2LjAwMDAwMDAwMCAtMDUw
MA0KQEAgLTcsMTYgKzcsMTYgQEANCiAgfQ0KICANCiArbWVzc2FnZSBSdW5fUG9zdGluc3QNCi0r
e1VwZGF0ZSBmaWxlcyBpbiAvZXRjfQ0KKyt7TWlzZSDgIGpvdXIgZGVzIGZpY2hpZXJzIGRlIC9l
dGN9DQogKw0KICttZXNzYWdlIFBvc3RpbnN0DQotK3tFeGVjdXRlIHBvc3RpbnN0IChvdmVyd3Jp
dGUgZXhpc3RpbmcgY29uZmlndXJhdGlvbil9DQorK3tFeOljdXRpb24gZGUgcG9zdGluc3QgKHJl
bXBsYWNlbWVudCBkZSBsYSBjb25maWd1cmF0aW9uIGFjdHVlbGxlKX0NCiArDQogK21lc3NhZ2Ug
RXRjdXBkYXRlDQotK3tFeGVjdXRlIGV0Y3VwZGF0ZSAoYXNrIGZvciBldmVyeSBvdmVyd3JpdGUp
fQ0KKyt7RXjpY3V0aW9uIGRlIGV0Y3VwZGF0ZSAoZGVtYW5kZXIgYXZhbnQgZCdlZmZlY3R1ZXIg
bGVzIGNoYW5nZW1lbnRzKX0NCiArDQogK21lc3NhZ2UgU2tpcF9wb3N0aW5zdA0KLSt7RG9uJ3Qg
dXBkYXRlIGFueSBmaWxlIG9uIC9ldGN9DQorK3tOZSBtb2RpZmllciBhdWN1biBmaWNoaWVyIGRh
bnMgL2V0Y30NCiArDQogIG1lc3NhZ2UgcmVpbnN0YWxsdXN1cmUNCiAge0TpY29tcHJlc3NvbnMg
bWFpbnRlbmFudCBsZXMgY29tcG9zYW50cyBkZSBOZXRCU0Qgc3VyIHVuIGRpc3F1ZSBkdXINCkBA
IC0zMiw3ICszMiw3IEBADQogK30NCiArDQogK21lc3NhZ2UgbW91bnRfZmFpbGVkDQotK3tNb3Vu
dGluZyAlcyBmYWlsZWQuIENvbnRpbnVlPw0KKyt7TGUgbW9udGFnZSBkdSBzeXN06G1lIGRlIGZp
Y2hpZXJzICVzIGEg6WNob3XpLiAgQ29udGludWVyID8NCiAgfQ0KICANCiAgbWVzc2FnZSBub2Rp
c2sNCkBAIC00OCw3ICs0OCw3IEBADQogK2xhIHbpcmlmaWNhdGlvbiBkZSBzb24gaW506WdyaXTp
IHBhciBmc2NrIGEg6WNob3XpLCBjb2RlIGQnZXJyZXVyICVkLg0KICANCiAtSW50ZXJydXB0aW9u
IGRlIGxhIHByb2PpZHVyZSBkZSBtaXNlIOAgam91ciwgY29kZSBkJ2VycmV1ciAlZC4NCi0rU291
aGFpdGV6LXZvdXMgY29udGludWVyIG1pc2Ug4CBqb3VyPw0KKytTb3VoYWl0ZXotdm91cyBjb250
aW51ZXIgbGEgbWlzZSDgIGpvdXIgPw0KICB9DQogIA0KICBtZXNzYWdlIHJvb3RtaXNzaW5nDQo=
--MP_/kSLj2N1n0rjmqKcyb+Z3XcS
Content-Type: text/plain
Content-Transfer-Encoding: 8bit
Content-Disposition: attachment; filename=msg.mi.fr.diff.diff
--- msg.mi.fr.diff.orig 2012-02-29 01:22:28.000000000 -0500
+++ msg.mi.fr.diff 2012-02-29 01:34:06.000000000 -0500
@@ -7,16 +7,16 @@
}
+message Run_Postinst
-+{Update files in /etc}
++{Mise à jour des fichiers de /etc}
+
+message Postinst
-+{Execute postinst (overwrite existing configuration)}
++{Exécution de postinst (remplacement de la configuration actuelle)}
+
+message Etcupdate
-+{Execute etcupdate (ask for every overwrite)}
++{Exécution de etcupdate (demander avant d'effectuer les changements)}
+
+message Skip_postinst
-+{Don't update any file on /etc}
++{Ne modifier aucun fichier dans /etc}
+
message reinstallusure
{Décompressons maintenant les composants de NetBSD sur un disque dur
@@ -32,7 +32,7 @@
+}
+
+message mount_failed
-+{Mounting %s failed. Continue?
++{Le montage du système de fichiers %s a échoué. Continuer ?
}
message nodisk
@@ -48,7 +48,7 @@
+la vérification de son intégrité par fsck a échoué, code d'erreur %d.
-Interruption de la procédure de mise à jour, code d'erreur %d.
-+Souhaitez-vous continuer mise à jour?
++Souhaitez-vous continuer la mise à jour ?
}
message rootmissing
--MP_/kSLj2N1n0rjmqKcyb+Z3XcS--
State-Changed-From-To: open->feedback
State-Changed-By: jdf@NetBSD.org
State-Changed-When: Mon, 21 May 2012 22:39:17 +0000
State-Changed-Why:
Fix committed
From: "Julian Fagir" <jdf@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc:
Subject: PR/12020 CVS commit: src/distrib/utils/sysinst
Date: Mon, 21 May 2012 22:38:26 +0000
Module Name: src
Committed By: jdf
Date: Mon May 21 22:38:26 UTC 2012
Modified Files:
src/distrib/utils/sysinst: disks.c msg.mi.de msg.mi.en msg.mi.es
msg.mi.fr msg.mi.pl
Log Message:
Changed returncodes to -1 of mount_disks in case of error (before, they were
inverted).
Add message mount_failed to be displayed when a mount fails, offering the
opportunity to go on anyway (fix for PR install/12020).
To generate a diff of this commit:
cvs rdiff -u -r1.123 -r1.124 src/distrib/utils/sysinst/disks.c
cvs rdiff -u -r1.67 -r1.68 src/distrib/utils/sysinst/msg.mi.de
cvs rdiff -u -r1.172 -r1.173 src/distrib/utils/sysinst/msg.mi.en
cvs rdiff -u -r1.43 -r1.44 src/distrib/utils/sysinst/msg.mi.es
cvs rdiff -u -r1.126 -r1.127 src/distrib/utils/sysinst/msg.mi.fr
cvs rdiff -u -r1.83 -r1.84 src/distrib/utils/sysinst/msg.mi.pl
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
From: "Jeff Rizzo" <riz@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc:
Subject: PR/12020 CVS commit: [netbsd-6] src/distrib/utils/sysinst
Date: Thu, 5 Jul 2012 17:29:16 +0000
Module Name: src
Committed By: riz
Date: Thu Jul 5 17:29:16 UTC 2012
Modified Files:
src/distrib/utils/sysinst [netbsd-6]: disks.c msg.mi.de msg.mi.en
msg.mi.es msg.mi.fr msg.mi.pl
Log Message:
Pull up following revision(s) (requested by jdf in ticket #393):
distrib/utils/sysinst/msg.mi.de: revision 1.68
distrib/utils/sysinst/msg.mi.fr: revision 1.127
distrib/utils/sysinst/msg.mi.en: revision 1.173
distrib/utils/sysinst/disks.c: revision 1.124
distrib/utils/sysinst/msg.mi.pl: revision 1.84
distrib/utils/sysinst/msg.mi.es: revision 1.44
Changed returncodes to -1 of mount_disks in case of error (before, they were
inverted).
Add message mount_failed to be displayed when a mount fails, offering the
opportunity to go on anyway (fix for PR install/12020).
To generate a diff of this commit:
cvs rdiff -u -r1.123.2.1 -r1.123.2.2 src/distrib/utils/sysinst/disks.c
cvs rdiff -u -r1.61.2.1 -r1.61.2.2 src/distrib/utils/sysinst/msg.mi.de
cvs rdiff -u -r1.169.2.1 -r1.169.2.2 src/distrib/utils/sysinst/msg.mi.en
cvs rdiff -u -r1.39.2.1 -r1.39.2.2 src/distrib/utils/sysinst/msg.mi.es
cvs rdiff -u -r1.119.2.1 -r1.119.2.2 src/distrib/utils/sysinst/msg.mi.fr
cvs rdiff -u -r1.78.2.1 -r1.78.2.2 src/distrib/utils/sysinst/msg.mi.pl
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
State-Changed-From-To: feedback->closed
State-Changed-By: jdf@NetBSD.org
State-Changed-When: Mon, 03 Sep 2012 18:31:57 +0000
State-Changed-Why:
No feedback, bug is 11 years old anyway
From: David Laight <david@l8s.co.uk>
To: gnats-bugs@NetBSD.org
Cc:
Subject: Re: install/12020 (Sysinst refuses upgrade unnecessarily (overzealous fscking))
Date: Mon, 3 Sep 2012 20:38:18 +0100
On Mon, Sep 03, 2012 at 06:31:59PM +0000, jdf@NetBSD.org wrote:
> Synopsis: Sysinst refuses upgrade unnecessarily (overzealous fscking)
>
> State-Changed-From-To: feedback->closed
> State-Changed-By: jdf@NetBSD.org
> State-Changed-When: Mon, 03 Sep 2012 18:31:57 +0000
> State-Changed-Why:
> No feedback, bug is 11 years old anyway
Last time I looked this was basiaclly still true ...
David
--
David Laight: david@l8s.co.uk
From: Julian Fagir <jdf@NetBSD.org>
To: gnats-bugs@NetBSD.org
Cc:
Subject: Re: install/12020 (Sysinst refuses upgrade unnecessarily
(overzealous fscking))
Date: Mon, 3 Sep 2012 22:02:54 +0200
--Sig_/e.SwiWFs.HqXDvF.DGRAacQ
Content-Type: text/plain; charset=US-ASCII
Content-Transfer-Encoding: quoted-printable
> > State-Changed-From-To: feedback->closed
> > State-Changed-By: jdf@NetBSD.org
> > State-Changed-When: Mon, 03 Sep 2012 18:31:57 +0000
> > State-Changed-Why:
> > No feedback, bug is 11 years old anyway
> =20
> Last time I looked this was basiaclly still true ...
When was this? The new behaviour should be as described in the commit
message. If not, please tell me such that I can fix it.
--Sig_/e.SwiWFs.HqXDvF.DGRAacQ
Content-Type: application/pgp-signature; name=signature.asc
Content-Disposition: attachment; filename=signature.asc
-----BEGIN PGP SIGNATURE-----
Version: GnuPG v1.4.9 (GNU/Linux)
iEYEARECAAYFAlBFDO4ACgkQc7h7cu1Hpp6dxwCgixLGHTuuiclQ9qbQ7UUryap3
cesAoLR1Ob85j3lkhm7HzFQZKQb4RyFT
=mh1V
-----END PGP SIGNATURE-----
--Sig_/e.SwiWFs.HqXDvF.DGRAacQ--
>Unformatted:
Sysinst refuses upgrade unnecessarily (overzealous fscking)
From: rhialto@polderland.nl
Reply-To: rhialto@polderland.nl
X-send-pr-version: 3.95
(Contact us)
$NetBSD: query-full-pr,v 1.36 2007/11/24 03:27:39 kano Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007
The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.