Changed returncodes to -1 of mount_disks in case of error (before, they were inverted). Add message mount_failed to be displayed when a mount fails, offering the opportunity to go on anyway (fix for PR install/12020).